# crypto

./: .gitignore  Cargo.toml  README.md  config.toml  perf.data  perf.data.old  sm4  test.txt
benches/: aesbench.rs  benchmark.rs  desbench.rs
src/: banner.rs  config.rs  consts.rs  lib.rs  libaes.rs  libdes.rs  libsm4.rs  shift.rs  utils.rs
